--- a/locales/list.yml
+++ b/locales/list.yml
@@ -9,11 +9,11 @@ list:
     name: "English"
     native_name: "English"
     author: "OpenVK Team"
-  - code: "ua"
+  - code: "uk"
     flag: "ua"
     name: "Ukrainian"
     native_name: "Україньска"
-    author: "Yaroslav Bjelograd, Andrej Lenťaj, Maxim Hrabovi (dechioyo) and Kirill (mbsoft)"
+    author: "Andrej Lenťaj, Maxim Hrabovi (dechioyo) and Kirill (mbsoft)"
   - code: "by"
     flag: "by"
     name: "Belarussian"
@@ -84,3 +84,8 @@ list:
     name: "Indonesian"
     native_name: "Bahasa Indonesia"
     author: "loliconazter"
+  - code: "qqx"
+    flag: "europeanunion"
+    name: "qqx"
+    native_name: "qqx"
+    author: "celestora"
