--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1244,6 +1244,16 @@
 "url_is_banned_title" = "Ссылка на подозрительный сайт";
 "url_is_banned_proceed" = "Перейти по ссылке";
 
+/* Helpdesk */
+"helpdesk" = "Поддержка";
+"helpdesk_agent" = "Агент Поддержки";
+"helpdesk_agent_card" = "Карточка агента";
+"helpdesk_positive_answers" = "положительных ответов";
+"helpdesk_negative_answers" = "отрицательных ответов";
+"helpdesk_all_answers" = "всего ответов";
+"helpdesk_showing_name" = "Отображаемое имя";
+"helpdesk_show_number" = "Показывать номер";
+"helpdesk_avatar_url" = "Ссылка на аватарку";
 /* Chandler */
 
 "c_user_removed_from_group" = "Пользователь был удалён из группы";
