Locales: am > hy
To comply with the ISO 639-1 standard, it was decided to rename the
Armenian localization file name to "hy.strings" to avoid confusion with
Amharic.

Don't ask why.

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -34,7 +34,7 @@ list:
     name: "German"
     native_name: "Deutsch"
     author: "SamyoFox"
-  - code: "am"
+  - code: "hy"
     flag: "am"
     name: "Armenian"
     native_name: "Հայերեն"
